# barest-kotlin

./: .bazelrc  .gitignore  README.md  WORKSPACE  barest-kotlin.sublime-project
.github/workflows/: ci.yml
android/app/: AndroidManifest.xml  BUILD.bazel
tools/: release_filter.jq
