load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "lib",
    srcs = ["MainActivity.kt"],
    visibility = ["//visibility:private"],
    deps = [
        "@maven//:androidx_emoji2_emoji2",
        "@maven//:androidx_lifecycle_lifecycle_process",
    ],
)

android_binary(
    name = "app",
    deps = [":lib"],
    manifest = "AndroidManifest.xml",
)
